versioned_docs/version-2.15/reference/subsystems/scalatest.mdx
---
title: scalatest
description: |
  The Scalatest test framework (https://www.scalatest.org/)
---

import Option from "@site/src/components/reference/Option";
import styles from "@site/src/components/reference/styles.module.css";

---

The Scalatest test framework (https://www.scalatest.org/)

Backend: <span className="color--primary">`pants.backend.experimental.scala`</span>

Config section: <span className="color--primary">`[scalatest]`</span>

<span className={styles.options}>

## Basic options

### `args`

<Option
  cli_repr={`--scalatest-args="[<shell_str>, <shell_str>, ...]", ... -- [<shell_str> [<shell_str> [...]]]`}
  env_repr='PANTS_SCALATEST_ARGS'
  toml_repr={`[scalatest]
args = [
    <shell_str>,
    <shell_str>,
    ...,
]`}
  default_repr={`[]`}
>

Arguments to pass directly to Scalatest, e.g. `--scalatest-args='-t $testname'`.

See https://www.scalatest.org/user_guide/using_the_runner for supported arguments.

</Option>

### `skip`

<Option
  cli_repr={`--[no-]scalatest-skip`}
  env_repr='PANTS_SCALATEST_SKIP'
  toml_repr={`[scalatest]
skip = <bool>`}
  default_repr={`False`}
>

If true, don&#x27;t use Scalatest when running `/home/josh/work/scie-pants/dist/pants test`.

</Option>

## Advanced options

### `artifacts`

<Option
  cli_repr={`--scalatest-artifacts="['<str>', '<str>', ...]"`}
  env_repr='PANTS_SCALATEST_ARTIFACTS'
  toml_repr={`[scalatest]
artifacts = [
    '<str>',
    '<str>',
    ...,
]`}
  default_repr={`[\n  "org.scalatest:scalatest_2.13:{version}"\n]`}
>

Artifact requirements for this tool using specified as either the address of a `jvm_artifact` target or, alternatively, as a colon-separated Maven coordinates (e.g., group:name:version). For Maven coordinates, the string `{version}` version will be substituted with the value of the `[scalatest].version` option.

</Option>

### `jvm_options`

<Option
  cli_repr={`--scalatest-jvm-options="['<str>', '<str>', ...]"`}
  env_repr='PANTS_SCALATEST_JVM_OPTIONS'
  toml_repr={`[scalatest]
jvm_options = [
    '<str>',
    '<str>',
    ...,
]`}
  default_repr={`[]`}
>

List of JVM options to pass to `scalatest` JVM processes.

Options set here will be added to those set in `[jvm].global_options`. Please check the documentation for the `jvm` subsystem to see what values are accepted here.

</Option>

### `lockfile`

<Option
  cli_repr={`--scalatest-lockfile=<str>`}
  env_repr='PANTS_SCALATEST_LOCKFILE'
  toml_repr={`[scalatest]
lockfile = <str>`}
  default_repr={`<default>`}
>

Path to a lockfile used for installing the tool.

Set to the string `<default>` to use a lockfile provided by Pants, so long as you have not changed the `--version` option. See https://github.com/pantsbuild/pants/blob/release_2.15.2/src/python/pants/backend/scala/subsystems/scalatest.default.lockfile.txt for the default lockfile contents.

To use a custom lockfile, set this option to a file path relative to the build root, then run `/home/josh/work/scie-pants/dist/pants jvm-generate-lockfiles --resolve=scalatest`.

</Option>

### `version`

<Option
  cli_repr={`--scalatest-version=<str>`}
  env_repr='PANTS_SCALATEST_VERSION'
  toml_repr={`[scalatest]
version = <str>`}
  default_repr={`3.2.10`}
>

Version string for the tool. This is available for substitution in the `[scalatest].artifacts` option by including the string `{version}`.

</Option>

## Deprecated options

None

## Related subsystems

None

</span>
